kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: homework
  labels: &labels
    app: myapp
spec:
  selector: *labels
  type: ClusterIP
  ports:
    - name: webserver
      port: 80
      targetPort: webserver
